Bumping public version of Watchr to 1.8.0 to resolve log4j vulnerability